spacing fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@ body {
 .main {
   text-align: center;
   max-width: 55rem;
+  margin-top: auto;
 
   &__heading {
     color: $color-grey;
